backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paldo
  labels:
    app: paldo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paldo
  template:
    metadata:
      labels:
        app: paldo
    spec:
      containers:
      - name: service-discovery
        image: gojeasuk3/service-discovery:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8761
      - name: api-gateway
        image: gojeasuk3/api-gateway:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      - name: portfolio-service
        image: gojeasuk3/portfolio-service:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
