backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paldo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /portfolio-service
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 8001
